# diagrams-mcp

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  puppeteer-config.json  pyproject.toml  railway.toml  server.json
.github/workflows/: ci.yml  release.yml
src/diagrams_mcp/: __init__.py  image_store.py  prompts.py  resources.py  sandbox.py  server.py
src/diagrams_mcp/tools/: discovery.py  equivalence.py  mermaid.py  plantuml.py  render.py
tests/: conftest.py  test_discovery.py  test_equivalence.py  test_image_store.py  test_mermaid.py  test_plantuml.py  test_prompts.py  test_render.py  test_resources.py  test_sandbox.py  test_server.py
