[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diagrams-mcp"
version = "0.1.0"
description = "MCP server for rendering diagrams using mingrammer/diagrams, Mermaid, and PlantUML"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Mykola Skrypets" }]
keywords = ["mcp", "diagrams", "architecture", "graphviz", "mermaid", "plantuml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "diagrams==0.25.1",
    "fastmcp==3.2.0",
]

[project.scripts]
diagrams-mcp = "diagrams_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/diagrams_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
